<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Janus</name>
  <version>0.0.0</version>
  <description>Janus is an open source, general purpose WebRTC server designed and developed by Meetecho. This fork of Janus adds a ROS 2 transport plugin and the ability to encrypt recordings.</description>
  <maintainer email="mquigley@openrobotics.org">Morgan Quigley</maintainer>
  <license>GPLv3</license>
  <author>Meetecho</author>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
